Verif/Test/Invalide/test_erreur_3.81-49.deca
// Description:
//    Programme soulevant l'erreur (3.81)
// Resultats:
//    Erreur contextuelle
//    Ligne 20 : Les types 'String' et 'type_classe(A)' sont incompatibles avec l'opérateur binaire '&&' (règle 3.81)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 20/01/2012

class A {
   void x() {
   }
}

int var;
A a;
{
   var = "a" && a;

}